# artic-trader

./: .env.dev.example  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IGNORE.md  LICENSE  Makefile  README.md  SECURITY.md  copyright.txt  currentBuildls.json  docker-compose.dev.yml  docker-compose.yml  inertia-details.md  openapi.yaml  render.yaml  requirements.txt  ruff.toml
.claude/: settings.json
shared/: errors.py  pyproject.toml
shared/models/: __init__.py  agent.py  credit.py  indexer.py  log.py  strategy.py  trade.py
shared/tests/: test_atr_tail_window.py  test_mean_reversion_algos.py  test_models.py  test_momentum_algos.py  test_statistical_algos.py  test_volume_algos.py
user-server/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
user-server/alembic/: env.py
user-server/alembic/versions/: 0002_schema.py  0003_agent_live_state.py  0004_agent_last_price.py  0007_decisions_table.py
user-server/user_server/: config.py  otel.py  security.py  server.py
user-server/user_server/agents/: push_router.py  registry.py  router.py  service.py  spawner.py
user-server/user_server/chain/: retry.py  signer.py  wallet.py
user-server/user_server/db/: base.py
user-server/user_server/decisions/: query.py
user-server/user_server/hub_callback/: router.py
user-server/user_server/indexer/: flusher.py  query.py  writer.py
user-server/user_server/llm/: providers.py  rate_limit.py  router.py  secrets_cache.py
user-server/user_server/logs/: query.py  ws.py
user-server/user_server/strategies/: builtins.py  router.py  runner.py  service.py
user-server/user_server/trades/: query.py
(+372 files in other folders)
