[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "artic-user-server"
version = "0.1.0"
description = "Per-user trading server; one instance per Morph VM."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "artic-shared",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["user_server*"]
